feat: Add new project "Alina" and fix typos in index page

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -15,6 +15,14 @@ const TAGS = {
 };
 const PROJECTS = [
     {
+        title: "Alina",
+        description:
+            "Inspirados por su experiencia como pareja de psicólogos especializados en terapia de pareja, han decidido crear un chatbot de asistencia personal diseñado para responder las inquietudes de sus pacientes. Este chatbot, entrenado por ellos, ofrece apoyo y orientación de manera accesible y personalizada.",
+        link: "https://supihachatbot.azurewebsites.net/",
+        image: "projects/alina_web.webp",
+        tags: [],
+    },
+    {
         title: "Wefeel: Relaciones sanas",
         description:
             "Es la forma más sencilla y entretenida de crear, consolidar y mantener relaciones sanas, felices y sostenibles en el tiempo.",
