--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,9 +45,9 @@ import Projects from "../components/Projects.astro";
                     móviles.
                 </p>
                 <p>
-                    Mi tratectoria me ha llevado aprender en <strong
+                    Mi trayectoria me ha llevado aprender en <strong
                         >desarrollo multiplatorma</strong
-                    > y servicios <strong>Rest API</strong> para crar un entorno
+                    > y servicios <strong>Rest API</strong> para crear un entorno
                     de desarrollo completo.
                 </p>
                 <p>
@@ -70,6 +70,10 @@ import Projects from "../components/Projects.astro";
                 <SocialPill href="mailto:roswer13@gmail.com">
                     <MailIcon class="size-4 md:size-6" />
                     roswer13@gmail.com
+                </SocialPill>
+
+                <SocialPill href="/Roswer-García-apps.pdf">
+                    Curriculum
                 </SocialPill>
             </nav>
         </SectionContainer>
